--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
-    "build": "node build/build.js && mv -f dist docs"
+    "build": "node build/build.js && cp -rf dist/** docs && rm -rf dist"
   },
   "dependencies": {
     "vue": "^2.5.2"
